--- a/subpages.html
+++ b/subpages.html
@@ -1,23 +1,34 @@
 <template name='lmSubpages'>
 
-  <div class='flexbox lm-subpages-header'>
-    <div class='lm-subpages-header-arrow lm-subpages-prev'>
-      {{#if hasPrevNextPage.prev}}
-        {{> Template.dynamic template=opts.templates.headerPrev}}
-      {{else}}
-      &nbsp;
-      {{/if}}
+  {{#if opts.showHeader}}
+    <div class='flexbox lm-subpages-header'>
+      <div class='lm-subpages-header-arrow lm-subpages-prev'>
+        {{#if hasPrevNextPage.prev}}
+          {{> Template.dynamic template=opts.templates.headerPrev}}
+        {{else}}
+        &nbsp;
+        {{/if}}
+      </div>
+      <div class='flex1 h3 lm-subpages-header-title-cont'><span class='lm-subpages-header-title'>{{curPage.title}}</span></div>
+      <div class='lm-subpages-header-arrow lm-subpages-next'>
+        {{#if hasPrevNextPage.next}}
+          {{> Template.dynamic template=opts.templates.headerNext}}
+        {{else}}
+        &nbsp;
+        {{/if}}
+      </div>
     </div>
-    <div class='flex1 h3 lm-subpages-header-title-cont'><span class='lm-subpages-header-title'>{{curPage.title}}</span></div>
-    <div class='lm-subpages-header-arrow lm-subpages-next'>
-      {{#if hasPrevNextPage.next}}
-        {{> Template.dynamic template=opts.templates.headerNext}}
-      {{else}}
-      &nbsp;
-      {{/if}}
+    <div class='lm-subpages-header-spacer'>&nbsp;</div>
+  {{/if}}
+
+  {{#if opts.showProgress}}
+    <div class='flexbox lm-subpages-progress'>
+      {{#each pagesFormatted}}
+        <div class='flex1 lm-subpages-progress-item {{xDisplay.classes.state}}'>&nbsp;</div>
+      {{/each}}
     </div>
-  </div>
-  <div class='lm-subpages-header-spacer'>&nbsp;</div>
+    <div class='lm-subpages-progress-spacer'>&nbsp;</div>
+  {{/if}}
   
   {{#if curPage}}
     {{> Template.dynamic template=curPage.template data=curPage.atts}}
